Added support for displaying Person instances using a query object.